--- a/Relatório/conference_101719.tex
+++ b/Relatório/conference_101719.tex
@@ -52,9 +52,9 @@ RISC-V, Assembly, RARS, Pulsar, Introdução aos Sistemas Computacionais, UnB, j
 \end{IEEEkeywords}
 
 \section{Introdução}
-Nossa implementação do jogo tem como objetivo contar uma história fictícia sobre um fantasma que pretende fugir de uma casa assombrada por se sentir fora de lugar nela. O dever do jogador é ajudá-lo a fazer isso, coletando chaves que abrirão portas, enfrentando inimigos, até o fantasma se encontrar finalmente livre. Dessa forma, estamos implementando todas as características do jogo de 1981, Pulsar, apenas com um tema estético diferente. 
+Nossa implementação do jogo tem como objetivo contar uma história fictícia sobre um fantasma que pretende fugir de uma casa assombrada por se sentir fora de lugar nela. O dever do jogador é ajudá-lo a fazer isso, coletando chaves que abrirão portas, enfrentando inimigos, economizando e ganhando combustível, até o fantasma se encontrar finalmente livre. Dessa forma, estamos implementando todas as características do jogo de 1981, Pulsar, apenas com um tema estético diferente. 
 
-O projeto tem a intenção de ser um jogo de terror, usando músicas de suspense e sustos, incentivando o jogador a também querer ajudar o fantasma a sair da casa assombrada.
+O projeto tem a intenção de ser um jogo de terror, usando músicas de suspense e sustos, incentivando psicologicamente o jogador a também querer ajudar o fantasma a sair da casa assombrada.
 
 Pela apresentação do projeto acontecer no mês de outubro, nomeamos nosso jogo: Pulsar (Edição de Halloween).
 
@@ -97,21 +97,23 @@ Seguindo a temática de Halloween, decidimos utilizar uma paleta de cores de ton
 Os desenhos dos inimigos foram inspirados por animais comumente encontrados em locais escuros e que as pessoas têm medo. Tendo isso em vista, escolhemos o rato e morcego para implementarmos no jogo.
 O personagem controlado pelo jogador é baseado na clássica cartoonização de um fantasma, um pano branco com dois olhos pretos.
 
-\begin{figure}[h]
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.7]{fantasma}
-\caption{Sprite do fantasma}
+\includegraphics[scale=1]{rato}
+\includegraphics[scale=0.4]{morcego}
+\caption{Fantasma e seus inimigos}
 \end{figure}  
 
-Sabendo que a utilização de cheats na apresentação foi aconselhada, desenhamos um novo desing para o jogador que, ao estar sob efeito do cheat, mudaria a cor de seu pano branco para um azul escuro, fazendo assim uma referência ao modo de como os fantasmas do jogo arcade japonês "Pac-Man" (1980)\textsuperscript{\cite{b6}} ficavam quando o jogador coletava uma "power pellets" no video-game.
-\begin{figure}[h]
+Sabendo que a utilização de cheats na apresentação foi aconselhada, desenhamos um novo design para o jogador que, ao estar sob efeito do cheat, mudaria a cor de seu pano branco para um azul escuro, fazendo assim uma referência ao modo de como os fantasmas do jogo arcade japonês "Pac-Man" (1980)\textsuperscript{\cite{b5}} ficavam quando o jogador coletava uma "power pellets" no video-game.
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.7]{fantasma_cheat}
 \includegraphics[scale=0.7]{fantasma_pacman}
-\caption{Sprite do fantasma}
+\caption{Fantasma com cheat e fantasma do pacman}
 \end{figure}  
 
-Para os tiros, pensamos do fantasma atirar ectoplasma como seu ataque contra os inimigos do mapa. O personagem "Geleia" do filme "Os Caça-Fantasmas" de 1984 foi grande parte da inspiração do desing do projétil.
+Para os tiros, pensamos em ter o fantasma atirar \emph{ectoplasma} como seu ataque contra os inimigos do mapa. O personagem "Geleia" do filme "Os Caça-Fantasmas" de 1984\textsuperscript{\cite{b6}} foi grande parte da inspiração do desing do projétil.
 
 \begin{figure}[H]
 \centering
@@ -119,12 +121,12 @@ Para os tiros, pensamos do fantasma atirar ectoplasma como seu ataque contra os 
 \caption{Sprite do ataque do jogador}
 \end{figure}  
 
-Em prol de manter a natureza de um jogo arcade, utilizamos a fonte do jogo "Super Mario World" (1990) na cor vermelha como a fonte do nosso projeto, realizando suas devidas adaptações tais como a criação de letras maiúsculas e minúsculas visto que não havia diferença no jogo original. 
+Em prol de manter a natureza de um jogo arcade, utilizamos a fonte do jogo "Super Mario World" (1990) (Fig. 7) na cor vermelha como a fonte do nosso projeto, realizando suas devidas adaptações tais como a criação de letras maiúsculas e minúsculas visto que não havia diferença no jogo original. 
 
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.3]{fonte}
-\caption{Fonte do jogo}
+\caption{Fonte utilizada no jogo Super Mario World}
 \end{figure} 
 
 Utilizamos como molde para o mapa do jogo em si o mapa em formato de labirinto presente em "Pulsar". Entretanto, o adaptamos para que a ideia de casa abandonada esteja presente em toda jogabilidade.
@@ -137,7 +139,7 @@ Utilizamos como molde para o mapa do jogo em si o mapa em formato de labirinto p
 
 \subsection{Lógica do jogo}
 
-A base utilizada para o desenvolvimento das mecânica que foram utilizadas no jogo foi a estrutura do diagrama (Fig. 6) que criamos para facilitar a direção do desenvolvimento.
+A base utilizada para o desenvolvimento das mecânica que foram utilizadas no jogo foi a estrutura do diagrama (Fig. 9) que criamos para facilitar a direção do desenvolvimento.
 
 \begin{figure}[h]
 \centering
@@ -152,15 +154,15 @@ Outra mecânica importante definida a partir do diagrama foram as condições qu
 Para o desenvolvimento das mecânicas internas do jogo, as quais não foram claramente definidas no diagrama base, foram desenvolvidos diferentes métodos para atingir os objetivos desejados. As mecânicas, com seus respectivos métodos, foram exemplificadas nos próximos tópicos.
 
 \subsubsection{Sistema de colisão}
- O sistema de colisões e coletas de chaves foram baseados na análise das cores dos pixeis nos arredores dos personagnes, tiros e inimigos. Comparando as diferentes cores possíveis tornou-se possível determinar as reações esperadas para cada um dos casos e tornava um único código capaz de atender todos os objetivos citados.
+ O sistema de colisões e coleta de chaves foi baseado na análise das cores dos pixeis nos arredores dos personagnes, tiros e inimigos. Comparando as diferentes cores possíveis tornou-se possível determinar as reações esperadas para cada um dos casos e tornou um único código capaz de atender todos os objetivos citados.
+
+Tendo a figura 10 como exemplo do funcionamento desse código, podemos observar que a parede possui uma cor específica em sua volta que foi definida como o código hexadecimal 0xC7, a qual é interpretada pelo RARS como um pixel inivisível. Fazendo uso dessa cor apenas para as paredes e o personagem tornou-se possível detectar quando teria uma colisão com objetos que não possuiam reação.
 
 \begin{figure}[h]
 \centering
 \includegraphics[scale=0.7]{sistema_de_colisao}
 \caption{Representação do sistema de colisão entre o personagem e as paredes do jogo}
 \end{figure}  
-
-Tendo a figura 7 como exemplo do funcionamento desse código, podemos observar que a parede possui uma cor específica em sua volta que foi definida como o código hexadecimal 0xC7, a qual é interpretada pelo Rars como inivisível. Fazendo uso dessa cor apenas para as paredes e o personagem tornou-se possível detectar quando teria uma colisão com objetos que não possuiam reação.
 
 Além disso, o mesmo método foi usado para determinar a colisão de tiros com inimigos, coleta de chaves, passagem de fase e danos causados por inimigos, cada um fazendo uso de uma cor distinta para facilitar a interpretação e evitar possíveis ambiguidades no código.
 \subsubsection{Movimentação do personagem} 
@@ -176,36 +178,45 @@ A inteligência dos inimigos criados para o jogo foi baseada no sistema de colis
 \end{figure}  
 
 o movimento dos ratos é em um único eixo, podendo ser para direita ou para esquerda. Esse mesmo conceito foi utilizado para os demais inimigos empregados no jogo.
- 
-\subsubsection{Sistema de chaves}  
-O sistema de chaves e portas foi feito com o uso de...
 
-\begin{figure}[H]
+\subsubsection{Pontuação do jogador}
+No sistema de score foi utilizado uma label para acumular toda a pontuação acumulada ao longo do jogo. Para a representação gráfica, foi utilizado o resto da divisão do valor da label para determinar as centenas, dezenas e unidades que deveriam ser exibidas na tela, e com o uso de branchs foi possível determinar quais dígitos deveriam ser exibidos.
+
+\begin{figure}[h]
 \centering
-\includegraphics[scale=1]{chave_e_porta}
-\caption{Imagem com a chave e sua respectiva porta}
-\end{figure}
-
-O Sistema de score foi feito... 
-
-[Imagem com o Score]
+\includegraphics[scale=0.7]{score}
+\caption{Exemplo da pontuação do jogador}
+\end{figure}  
 
 \section{Resultados Obtidos}
-No geral, nossas dificuldades foram superadas e conseguimos criar um jogo completo, com início, meio e fim. 
+No geral, nossas dificuldades foram superadas e conseguimos criar um jogo completo, com início, meio e fim, apesar de ainda conmter alguns erros de jogabilidade. 
 
-O tema que tinhamos em mente foi implementado com sucesso assim como as técnicas que elaboramos para a execução do projeto. 
+O tema que tinhamos em mente foi implementado com sucesso assim como a maioria das técnicas que elaboramos para a execução do projeto. 
 
 Como resultado, a equipe adquiriu um melhor entendimento das mecânicas para o desenvolvimento em Assembly e a lógica de programação em Assembly na arquitetura RISC-V, assim como noções de desenvolvimento em baixo nível, como gestão manual de memória e planejamento de um projeto com recursos limitados.
 
 Apesar de não termos conseguido implementar uma música de fundo para tocar durante o jogo, nós conseguimos implementar várias músicas, cada uma para situações diferentes no jogo, melhorando a experiência de jogador.
 
-Em relação a arte visual do jogo, esta foi bem executada, conseguimos criar um sprite\textsuperscript{\cite{b5}} para todos os objetos e personagens do jogo 
+Em relação a arte visual do jogo, esta foi bem executada, conseguimos criar um sprite\textsuperscript{\cite{b7}} para todos os objetos e personagens do jogo. 
 
-Alguns dos detalhes que tinhamos como planejamento não foram implementados, porém a falta desses detalhes não atrapalha de nenhuma maneira a experiência do jogador.
+Alguns dos detalhes técnicos que tinhamos como planejamento não foram implementados perfeitamente. Por exemplo, relatamos que o sistema de pontuação é algumas vezes instável. 
+
+Outra coisa que não funciona idealmente é o sistema de eliminação de inimigos. Ao jogador atirar nos inimigos, o jogador ganha combustível, assim como deveria ser feito, porém eles não morrem. A morte dos inimigos só ocorre quando o personagem principal passa na frente deles. Dessa forma, a morte dos inimigos ocorre, porém não exatamente como planejamos.
+
 
 \section*{Conclusão}
 
-Tendo em vista os pontos observados
+Tendo em vista os pontos observados, Pulsar (Edição de Halloween) é um projeto criado por nosso grupo contendo os elementos do jogo de arcade de 1981, Pulsar, com temas de Halloween no intuito de ser um jogo de terror.
+
+Mesmo com recursos bastante limitados, conseguimos criar algo que pode ser considerado um jogo finalizado. O jogo tem um objetivo, possui arte gráfica, sonora e diversas tecnicalidades para a jogabilidade ser possível. 
+
+Esperamos que quem jogar tenha uma boa experiência e possa se divertir. Feliz Halloween!  
+
+\begin{figure}[h]
+\centering
+\includegraphics[scale=0.7]{tela_final}
+\caption{Tela final do jogo, quando o fantasma consegue fugir da casa assombrada}
+\end{figure}  
 
 \begin{thebibliography}{00}
 \bibitem{b1} \url{https://www.arcade-museum.com/game_detail.php?game_id=9150} 
@@ -216,9 +227,11 @@ Tendo em vista os pontos observados
 
 \bibitem{b4} \url{https://youtu.be/hZY5DBmgC_A}
 
-\bibitem{b5} \url{https://pt.wikipedia.org/wiki/Sprite_(computa%C3%A7%C3%A3o_gr%C3%A1fica)}
+\bibitem{b5} \url{https://pt.wikipedia.org/wiki/Pac-Man}
 
-\bibitem{b6} \url{https://pt.wikipedia.org/wiki/Pac-Man}
+\bibitem{b6} \url{https://youtu.be/mDYdtTuFUKw}
+
+\bibitem{b7} \url{https://pt.wikipedia.org/wiki/Sprite_(computa%C3%A7%C3%A3o_gr%C3%A1fica)}
 
 \end{thebibliography}
 \vspace{12pt}
